# venturous

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Venturous.kdev4  update_and_configure_submodules  update_submodules_and_configure  venturous.desktop  venturous.kdev4
modules/: SimpleFugue.qrc  generate_qrc
resources/: Venturous.qrc
resources/SimpleFugue/: SimpleFugue.qrc  download_png  generate_png  generate_qrc  icon_list  set_paths
resources/documents/: index.html  user-guide.html
resources/icons/: generate_png
src/: Application.cpp  Application.hpp  FilePattern.cpp  FilePattern.hpp  Preferences.cpp  Preferences.hpp  SharedMemory.hpp  main.cpp
src/GUI/: Actions.cpp  Actions.hpp  CustomActions.cpp  CustomActions.hpp  GuiUtilities.cpp  GuiUtilities.hpp  Icons.cpp  Icons.hpp
src/GUI/MainWindow/: CommonTypes.hpp  HistoryWidget.cpp  HistoryWidget.hpp  InputController.hpp  MainWindow-file.cpp  MainWindow-help.cpp  MainWindow-init.cpp  MainWindow-inl.hpp  MainWindow-playback.cpp  MainWindow-playlist.cpp  MainWindow.cpp  MainWindow.hpp  PlaybackComponent.cpp  PlaybackComponent.hpp  TreeWidget.cpp  TreeWidget.hpp  WindowUtilities.cpp  WindowUtilities.hpp
src/GUI/MainWindow/PlaybackComponent/: HistoryWidget.cpp  HistoryWidget.hpp  PlaybackComponent.cpp  PlaybackComponent.hpp
src/GUI/MainWindow/PlaylistComponent/: PlaylistComponent.cpp  PlaylistComponent.hpp  TreeWidget.cpp  TreeWidget.hpp
src/GUI/MainWindow/PreferencesComponent/: PreferencesComponent.cpp  PreferencesComponent.hpp
src/GUI/MainWindow/Window/: MainWindow-help.cpp  MainWindow-init.cpp  MainWindow.cpp  MainWindow.hpp
src/GUI/PreferencesWindow/: AddingDirectoryPage.cpp  AddingDirectoryPage.hpp  AddingPolicyFrame.hpp  AddingPolicyPage.cpp  AddingPolicyPage.hpp  CustomActionsPage.cpp  CustomActionsPage.hpp  FilenamePatternsPage.cpp  FilenamePatternsPage.hpp  GeneralPage.cpp  GeneralPage.hpp  HistoryPreferencesFrame.cpp  HistoryPreferencesFrame.hpp  MainPreferencesPage.cpp  MainPreferencesPage.hpp  PatternListWidget.cpp  PatternListWidget.hpp  PlaybackPage.cpp  PlaybackPage.hpp  PreferencesPage.cpp  PreferencesPage.hpp  PreferencesWindow.cpp  PreferencesWindow.hpp  RevertAndRestoreDefaultsTab.cpp  RevertAndRestoreDefaultsTab.hpp
src/GUI/PreferencesWindow/AddingDirectoryPage/: AddingDirectoryPage.cpp  AddingDirectoryPage.hpp  AddingPolicyFrame.cpp  PatternListWidget.cpp  PatternListWidget.hpp
src/GUI/PreferencesWindow/CustomActionsPage/: CustomActionsPage.cpp  CustomActionsPage.hpp
src/GUI/PreferencesWindow/GeneralPage/: GeneralPage.cpp  GeneralPage.hpp
src/GUI/PreferencesWindow/PlaybackPage/: HistoryPreferencesFrame.cpp  HistoryPreferencesFrame.hpp  PlaybackPage.cpp  PlaybackPage.hpp
src/Ventool/: ventool.cpp
